# ical-todoist

./: .gitignore  README.md  config.yaml.sample  ical-todoist.py  pyproject.toml
