[project]
name = "ical-todoist"
version = "0.1.0"
description = "A small script that can read an ical file from a link or filesystem and push its contents to Todoist."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "icalendar>=6.3.1",
    "markdownify>=1.2.0",
    "pyyaml>=6.0.3",
    "todoist-api-python>=3.1.0",
]
